# p2p_node

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: algorithms.rs  lib.rs  main.rs  node.rs  protocol.rs
src/algorithms/: choking.rs  content.rs  election.rs  gossip.rs  hashcash.rs  heartbeat.rs  reputation.rs
supply-chain/: config.toml
